sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:8: error: value switch is not a member of Int
    getColor(afterBlue) switch {
                        ^