sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var afterBlue:Int = 0;
  var whiteRed:Int = getSize() -1;
  var beforeWhite:Int = getSize() -1;
  
  while (afterBlue < beforeWhite) {
    getColor(afterBlue) switch {
      case BLUE => 1
    }
    
  }
}